Fix telemetry message format for time_logger
[#167629713] Write integration tests to configure centralizer with test API key and confirm that the system works

Signed-off-by: Shaan Sapra <shsapra@pivotal.io>

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -3,4 +3,6 @@ builds:
     version: 2.8.release54
   ab4a6d8f-c5eb-447e-74fd-ba3b580ad155:
     version: 2.8.release55
+  b4af50c0-cb9e-437e-7570-576f64fdfbb7:
+    version: 2.8.release56
 format-version: "2"
