Cut new release
- Update example-errand to print new director accessor

[#172294555] metrics-server PR

Signed-off-by: Ming Xiao <mxiao@pivotal.io>

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -1,4 +1,6 @@
 builds:
+  89b99003-0bc5-4aeb-6dd8-24c8059330e9:
+    version: 2.10.release59
   bef68a6e-bb0f-4338-76fe-2f599eb13222:
     version: 2.10.release58
 format-version: "2"
