Cut new 2.9 release
[#173932528] Test jump upgrades in CI

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -1,4 +1,6 @@
 builds:
   b9481462-effd-43bb-50ba-9fefdc6aeaf3:
     version: 2.9.release57
+  f6737bb5-d985-462a-4e82-6d5c878e5f78:
+    version: 2.9.release58
 format-version: "2"
