Update example-product to migrate stemcell default.
- 2.10 example product configuration has a default of "ubuntu-xenial"
  which no longer exists for 3.0. We added a new migration template that
  will create a migration in order to correctly change this default.
- We `+ 10` and `+ i` in the generate-migrations script in order to
  ensure a valid migration timestamp (must have a 12 digit timestamp),
  and also ensure no timestamp conflicts.

Signed-off-by: Rajan Agaskar <ragaskar@vmware.com>

--- a/example-product/.gitignore
+++ b/example-product/.gitignore
@@ -1,3 +1,4 @@
 releases/*.tgz
 generated-example-product.pivotal
 migrations/v1/*_example_credhub_credential_migration*.js
+migrations/v1/*_example_product_stemcell_migration*.js
