Cut example release 63
Includes use of #present? in templates

[#186295738] BOSH template rendering fails when `#present?` is used

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -1,4 +1,6 @@
 builds:
+  8391406e-1744-45c3-43dd-1595568e3a55:
+    version: 2.10.release63
   89b99003-0bc5-4aeb-6dd8-24c8059330e9:
     version: 2.10.release59
   b1991d2b-0037-435d-7074-d9f9366f7429:
